# bchwtz-gateway-microservices

./: .env-default  .env-default-ble  .env-docker  .gitignore  README.md  pyproject.toml  setpath.fish  setpath.sh
api/: Dockerfile  api.py  requirements.txt
ble-daemon/: .env-default  bluetooth.py  bluetooth_cmd_daemon.py  bluetooth_discovery_daemon.py  json_helper.py  requirements.txt  setup.py  simple_connect.py
ble-daemon/daemon/: bluetooth.py  json_helper.py  mqtt.py
cli/: cli.py
deployments/: docker-compose.prod.yml  docker-compose.yml
docs/: index.md  infrastructure.md  overview.md  roaming_states.md  use_cases_and_testing.md
frontend/: Dockerfile  angular.json  package-lock.json  package.json
frontend/public/docs/: infrastructure.md  roaming_states.md  use_cases_and_testing.md
frontend/src/: styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts  maptoarray.pipe.spec.ts  maptoarray.pipe.ts  tag.service.ts
frontend/src/app/docs/: docs.component.html  docs.component.ts
frontend/src/app/gateway/: gateway.component.spec.ts  gateway.component.ts
frontend/src/app/start/: start.component.html  start.component.ts
frontend/src/app/tag/: tag.component.html  (+1 more)
gateway/: json_helper.py  mqtt.py
gateway/sensor/: acceleration.py
gateway/tag/: tag.py
gateway/tag/controller/: tag.py
platform/: platform.py
roaming/: Dockerfile  roaming_daemon.py
test/: test.py
transcoder/: Dockerfile  requirements.txt  test.py  transcoder.py
transcoder/utils/: decoding.py  encoding.py  signals.py
